# purchase-order-agent

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.eval.yaml  config.yaml  improvements.md  phase1_spec.md  phase2_spec.md  phase3_spec.md  phase4_spc.md  pyproject.toml  test_composio.py
evals/: conftest.py  generate_fixtures.py  run_eval.py  sync_dataset.py
evals/graders/: classification.py  email_quality.py  extraction.py  trajectory.py  validation.py
evals/scenarios/: ambiguous.json  happy_path.json  malformed_pdf.json  missing_fields.json  not_a_po.json
prompts/en/: classify.yaml  extract.yaml  notify.yaml
scripts/: test_composio.py  test_e2e_local.py  verify_composio.py
src/: api.py  builder.py  config.py  workflow.py
src/core/: llm_responses.py  purchase_order.py  webhook.py  workflow_state.py
src/nodes/: base.py  classify.py  extract.py  notify.py  report.py  track.py  validate.py
src/services/llm/: base.py  openai.py
tests/: conftest.py  mocks.py  test_config.py  test_e2e_smoke.py  test_graders.py  test_mock_tool_manager.py  test_models.py  test_nodes.py  test_prompt_store.py
tests/integration/: test_api.py  test_classify_llm.py  test_composio_real.py  test_extract_llm.py
tests/unit/: test_builder.py  test_classify_node.py  test_composio_tool_manager.py  test_config.py  test_extract_node.py  test_models.py  test_nodes.py  test_notify_node.py  test_openai_llm.py  test_prompt_store.py  test_report_node.py  test_tesseract_ocr.py  test_track_node.py  test_validate_node.py  test_webhook_parser.py
(+11 files in other folders)
