[project]
name = "po-agent"
version = "0.1.0"
description = "AI agent for purchase order intake and fulfillment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "opik>=1.0",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "httpx>=0.27",
    "pydantic-settings>=2.12.0",
    "openai>=2.20.0",
    "composio>=0.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "integration: tests crossing service boundaries",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
